--- a/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrTagSearchView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrTagSearchView.xaml
@@ -242,6 +242,8 @@
                                 <RowDefinition Height="{StaticResource Layout.RowSpace}" />
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="{StaticResource Layout.RowSpace}" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="{StaticResource Layout.RowSpace}" />
                             </Grid.RowDefinitions>
                             <Label
                                 Grid.Row="0"
@@ -450,11 +452,38 @@
                                 </Button.ToolTip>
                             </Button>
 
+                            <Label Content="{x:Static p:Resources.FilenameTemplate}" Grid.Column="0" Grid.Row="10"
+                                  Margin="3,0,0,0" Padding="3,0,0,0">
+                                <Label.ToolTip>
+                                    <ToolTip>
+                                        <StackPanel>
+                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipFilenameTemplate}" />
+                                            <TextBlock xml:space="preserve"
+                                                   Text="{x:Static p:Resources.ToolTipFilenameTemplateDescription}" />
+                                        </StackPanel>
+                                    </ToolTip>
+                                </Label.ToolTip>
+                            </Label>
+
+                            <TextBox Grid.Column="1" Grid.ColumnSpan="5" Grid.Row="10" Padding="0" 
+                                 Text="{Binding BlogFile.FilenameTemplate, Mode=TwoWay, ValidatesOnDataErrors=True}"
+                                     LostFocus="FilenameTemplate_LostFocus">
+                                <TextBox.ToolTip>
+                                    <ToolTip>
+                                        <StackPanel>
+                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipFilenameTemplate}" />
+                                            <TextBlock xml:space="preserve"
+                                                   Text="{x:Static p:Resources.ToolTipFilenameTemplateDescription}" />
+                                        </StackPanel>
+                                    </ToolTip>
+                                </TextBox.ToolTip>
+                            </TextBox>
+                            
                             <CheckBox
-                                Grid.Row="10"
+                                Grid.Row="12"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="2"
-                                Margin="3,0,0,0"
+                                Margin="2,0,1,0"
                                 Padding="3,0,0,0"
                                 Content="{x:Static p:Resources.SkipGif}"
                                 IsChecked="{Binding BlogFile.SkipGif, Mode=TwoWay}" />
@@ -478,7 +507,7 @@
                         </CheckBox>-->
 
                             <CheckBox
-                                Grid.Row="14"
+                                Grid.Row="16"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
@@ -496,7 +525,7 @@
                             </CheckBox>
 
                             <CheckBox
-                                Grid.Row="16"
+                                Grid.Row="18"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
@@ -514,7 +543,7 @@
                             </CheckBox>
 
                             <CheckBox
-                                Grid.Row="18"
+                                Grid.Row="20"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
@@ -532,7 +561,7 @@
                             </CheckBox>
 
                             <CheckBox
-                                Grid.Row="20"
+                                Grid.Row="22"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
@@ -550,7 +579,7 @@
                             </CheckBox>
 
                             <CheckBox
-                                Grid.Row="22"
+                                Grid.Row="24"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
