--- a/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrBlogView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrBlogView.xaml
@@ -796,7 +796,7 @@
 
                             <TextBox Grid.Column="1" Grid.ColumnSpan="5" Grid.Row="34" Padding="0" 
                                  Text="{Binding BlogFile.FilenameTemplate, Mode=TwoWay, ValidatesOnDataErrors=True}"
-                                 LostFocus="FilenameTemplate_LostFocus">
+                                 PreviewLostKeyboardFocus="FilenameTemplate_PreviewLostKeyboardFocus">
                                 <TextBox.ToolTip>
                                     <ToolTip>
                                         <StackPanel>
