Fix Search crawler with new privacy consent handling
- Tumblr added a new privacy consent, which heavily relies on javascript code, in front of the search page.
- In the settings dialog beside the login button there is a new "privacy consent" button. When clicked it opens a cats search in a browser window. You should confirm the privacy consent and close the window. The generated cookies are added to TumblThree's cookie store.

--- a/src/TumblThree/TumblThree.Presentation/Views/SettingsView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/SettingsView.xaml
@@ -1011,6 +1011,25 @@
                                 </Button.ToolTip>
                             </Button>
                             <Button
+                                x:Name="buttonPrivacyConsent"
+                                Grid.Column="1"
+                                MinWidth="90"
+                                Margin="10"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Center"
+                                Command="{Binding PrivacyConsentCommand}"
+                                Content="{x:Static p:Resources.PrivacyConsent}"
+                                IsEnabled="True">
+                                <Button.ToolTip>
+                                    <ToolTip>
+                                        <StackPanel>
+                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipPrivacyConsentBrowser}" />
+                                            <TextBlock xml:space="preserve" Text="{x:Static p:Resources.ToolTipPrivacyConsentBrowserDescription}" />
+                                        </StackPanel>
+                                    </ToolTip>
+                                </Button.ToolTip>
+                            </Button>
+                            <Button
                                 x:Name="tumblrLogout"
                                 Grid.Column="6"
                                 MinWidth="90"
