--- a/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrSearchView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrSearchView.xaml
@@ -188,6 +188,8 @@
                                 <RowDefinition Height="{StaticResource Layout.RowSpace}" />
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="{StaticResource Layout.RowSpace}" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="{StaticResource Layout.RowSpace}" />
                             </Grid.RowDefinitions>
 
                             <Label Content="{x:Static p:Resources.Posts}" Grid.Column="0" Grid.ColumnSpan="2"
@@ -261,49 +263,64 @@
                                 </Label.ToolTip>
                             </Label>
 
-                            <Label Content="{x:Static p:Resources.DownloadPages}" Grid.Column="0" Grid.Row="6" Margin="3,0,3,0" Padding="3,0,3,0">
+                            <Label
+                                Grid.Row="6"
+                                Grid.Column="0"
+                                Margin="3,0,3,0"
+                                Padding="3,0,3,0"
+                                Content="{x:Static p:Resources.DownloadFrom}">
                                 <Label.ToolTip>
                                     <ToolTip>
                                         <StackPanel>
-                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipDownloadPages}" />
-                                            <TextBlock xml:space="preserve" Text="{x:Static p:Resources.ToolTipDownloadPagesDescription}" />
+                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipDownloadFrom}" />
+                                            <TextBlock xml:space="preserve" Text="{x:Static p:Resources.ToolTipDownloadTagsFromDescription}" />
                                         </StackPanel>
                                     </ToolTip>
                                 </Label.ToolTip>
                             </Label>
 
-                            <TextBox Grid.Column="1" Grid.Row="6" Padding="0" 
-                                 Text="{Binding BlogFile.DownloadPages, Mode=TwoWay, ValidatesOnDataErrors=True}">
+                            <TextBox
+                                Grid.Row="6"
+                                Grid.Column="1"
+                                Padding="0"
+                                Text="{Binding BlogFile.DownloadFrom, Mode=TwoWay, ValidatesOnDataErrors=True}">
                                 <TextBox.ToolTip>
                                     <ToolTip>
                                         <StackPanel>
-                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipDownloadPages}" />
-                                            <TextBlock xml:space="preserve"
-                                                   Text="{x:Static p:Resources.ToolTipDownloadPagesDescription}" />
+                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipDownloadFrom}" />
+                                            <TextBlock xml:space="preserve" Text="{x:Static p:Resources.ToolTipDownloadTagsFromDescription}" />
                                         </StackPanel>
                                     </ToolTip>
                                 </TextBox.ToolTip>
                             </TextBox>
 
-                            <Label Content="{x:Static p:Resources.PageSize}" Grid.Column="3" Grid.Row="6" Margin="3,0,3,0" Padding="3,0,3,0">
+                            <Label
+                                Grid.Row="6"
+                                Grid.Column="3"
+                                Margin="3,0,3,0"
+                                Padding="3,0,3,0"
+                                Content="{x:Static p:Resources.DownloadTo}">
                                 <Label.ToolTip>
                                     <ToolTip>
                                         <StackPanel>
-                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipPageSize}" />
-                                            <TextBlock xml:space="preserve" Text="{x:Static p:Resources.ToolTipPageSizeDescription}" />
+                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipDownloadTo}" />
+                                            <TextBlock xml:space="preserve" Text="{x:Static p:Resources.ToolTipDownloadTagsToDescription}" />
                                         </StackPanel>
                                     </ToolTip>
                                 </Label.ToolTip>
                             </Label>
 
-                            <TextBox Grid.Column="4" Grid.ColumnSpan="2" Grid.Row="6" Padding="0" 
-                                 Text="{Binding BlogFile.PageSize, Mode=TwoWay, ValidatesOnDataErrors=True}">
+                            <TextBox
+                                Grid.Row="6"
+                                Grid.Column="4"
+                                Grid.ColumnSpan="2"
+                                Padding="0"
+                                Text="{Binding BlogFile.DownloadTo, Mode=TwoWay, ValidatesOnDataErrors=True}">
                                 <TextBox.ToolTip>
                                     <ToolTip>
                                         <StackPanel>
-                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipPageSize}" />
-                                            <TextBlock xml:space="preserve"
-                                                   Text="{x:Static p:Resources.ToolTipPageSizeDescription}" />
+                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipDownloadTo}" />
+                                            <TextBlock xml:space="preserve" Text="{x:Static p:Resources.ToolTipDownloadTagsToDescription}" />
                                         </StackPanel>
                                     </ToolTip>
                                 </TextBox.ToolTip>
@@ -445,6 +462,24 @@
                                             <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipRegExVideos}" />
                                             <TextBlock xml:space="preserve"
                                                        Text="{x:Static p:Resources.ToolTipRegExVideosDescription}" />
+                                        </StackPanel>
+                                    </ToolTip>
+                                </CheckBox.ToolTip>
+                            </CheckBox>
+
+                            <CheckBox
+                                Grid.Row="24"
+                                Grid.Column="0"
+                                Grid.ColumnSpan="5"
+                                Margin="3,0,0,0"
+                                Padding="3,0,0,0"
+                                Content="{x:Static p:Resources.DumpCrawlerData}"
+                                IsChecked="{Binding BlogFile.DumpCrawlerData, Mode=TwoWay}">
+                                <CheckBox.ToolTip>
+                                    <ToolTip>
+                                        <StackPanel>
+                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipDumpCrawlerData}" />
+                                            <TextBlock xml:space="preserve" Text="{x:Static p:Resources.ToolTipDumpCrawlerDataDescription}" />
                                         </StackPanel>
                                     </ToolTip>
                                 </CheckBox.ToolTip>
