--- a/src/TumblThree/TumblThree.Presentation/Views/ShellWindow.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/ShellWindow.xaml
@@ -54,7 +54,7 @@
         </Grid.RowDefinitions>
 
         <Border Grid.ColumnSpan="3" Grid.Row="0" BorderBrush="Transparent" BorderThickness="0,0,0,1"
-                Background="{StaticResource ErrorBackground}">
+                Background="{Binding LastErrorColor}">
             <Border.Style>
                 <Style TargetType="Border">
                     <Style.Triggers>
