--- a/src/TumblThree/TumblThree.Presentation/Resources/ControlResources.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Resources/ControlResources.xaml
@@ -62,6 +62,20 @@
         BasedOn="{StaticResource InplaceButtonStyle}"
         TargetType="Button">
         <Setter Property="Content" Value="&#xE10A;" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="Border" Background="{TemplateBinding Background}">
+                        <ContentPresenter Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#80FFFFFF" TargetName="Border" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style
