--- a/src/TumblThree/TumblThree.Presentation/Views/AboutView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/AboutView.xaml
@@ -7,7 +7,8 @@
         xmlns:dd="clr-namespace:TumblThree.Presentation.DesignData"
         mc:Ignorable="d" Title="{x:Static p:Resources.About}" Icon="{StaticResource TumblThreeIcon}" MinWidth="200"
         MinHeight="120"
-        SizeToContent="WidthAndHeight" ShowInTaskbar="False" ResizeMode="NoResize"
+        SizeToContent="WidthAndHeight" ShowInTaskbar="False" 
+        ResizeMode="NoResize"
         d:DataContext="{d:DesignInstance dd:SampleAboutViewModel, IsDesignTimeCreatable=True}">
 
     <DockPanel>
