--- a/src/TumblThree/TumblThree.Presentation/Views/AboutView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/AboutView.xaml
@@ -5,7 +5,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:dd="clr-namespace:TumblThree.Presentation.DesignData"
-        mc:Ignorable="d" Title="{x:Static p:Resources.About}" Icon="{StaticResource TumblThreeIcon}" MinWidth="200"
+        mc:Ignorable="d" Title="{x:Static p:Resources.About}" Icon="{StaticResource TumblThreeIcon}" 
+        MinWidth="200"
         MinHeight="120"
         SizeToContent="WidthAndHeight" ShowInTaskbar="False" 
         ResizeMode="NoResize"
