Refactor BrushResourceConverter from Applications to Presentation

--- a/src/TumblThree/TumblThree.Presentation/Resources/ConverterResources.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Resources/ConverterResources.xaml
@@ -52,4 +52,6 @@
 
     <c:TumblrBlogCrawlerTypesConverter x:Key="TumblrBlogCrawlerTypesConverter" />
 
+    <c:BrushResourceConverter x:Key="BrushResourceConverter" />
+
 </ResourceDictionary>
