--- a/src/TumblThree/TumblThree.Presentation/Views/ShellWindow.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/ShellWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:dd="clr-namespace:TumblThree.Presentation.DesignData"
         xmlns:ctrl="clr-namespace:TumblThree.Presentation.Controls"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:vm="clr-namespace:TumblThree.Applications.ViewModels;assembly=TumblThree.Applications" xmlns:l="http://schemas.microsoft.com/netfx/2009/xaml/presentation" xmlns:l1="clr-namespace:TumblThree.Applications.Converter;assembly=TumblThree.Applications"
+        xmlns:vm="clr-namespace:TumblThree.Applications.ViewModels;assembly=TumblThree.Applications" xmlns:l="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
         mc:Ignorable="d" Icon="{StaticResource TumblThreeIcon}" Width="800" Height="500"
         d:DataContext="{d:DesignInstance dd:SampleShellViewModel, IsDesignTimeCreatable=True}">
 
@@ -40,11 +40,6 @@
         <KeyBinding Command="{Binding CrawlerService.StopCommand}" Key="Space" Modifiers="Shift" />
     </Window.InputBindings>
 
-    <Window.Resources>
-        <l1:BrushResourceConverter x:Key="brushConverter">
-        </l1:BrushResourceConverter>
-    </Window.Resources>
-
     <Grid x:Name="grid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -59,7 +54,7 @@
         </Grid.RowDefinitions>
 
         <Border Grid.ColumnSpan="3" Grid.Row="0" BorderBrush="Transparent" BorderThickness="0,0,0,1"
-                Background="{Binding LastErrorColorString, Converter={StaticResource brushConverter}}">
+                Background="{Binding LastErrorColorString, Converter={StaticResource BrushResourceConverter}}">
             <Border.Style>
                 <Style TargetType="Border">
                     <Style.Triggers>
